--- a/MyLocations/Base.lproj/Main.storyboard
+++ b/MyLocations/Base.lproj/Main.storyboard
@@ -139,6 +139,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="23l-je-fp3" kind="push" identifier="PickCategory" id="nEw-dk-4Gh"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -284,6 +287,7 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="addressLabel" destination="ec3-h0-Rgj" id="ndC-pV-Hab"/>
+                        <outlet property="categoryLabel" destination="DJP-EH-PEv" id="p2w-ic-JVb"/>
                         <outlet property="dateLabel" destination="PmJ-98-MVJ" id="jPq-qs-tzp"/>
                         <outlet property="descriptionTextView" destination="QPe-C5-D5q" id="HBS-J6-goj"/>
                         <outlet property="latitudeLabel" destination="EZ3-xc-ebE" id="NBb-QW-bOO"/>
@@ -293,6 +297,48 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6SE-iv-k6D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1353" y="-304"/>
+        </scene>
+        <!--Categories View Controller-->
+        <scene sceneID="iHy-AE-ebQ">
+            <objects>
+                <tableViewController id="23l-je-fp3" customClass="CategoriesViewController" customModule="MyLocations" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="lyT-ej-qUc">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="categoryCell" textLabel="rRW-An-E1k" style="IBUITableViewCellStyleDefault" id="eVY-bn-Tez">
+                                <rect key="frame" x="0.0" y="92" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eVY-bn-Tez" id="4ty-1b-gc7">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="rRW-An-E1k">
+                                            <rect key="frame" x="15" y="0.0" width="290" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="pb5-I0-oQN" kind="unwind" identifier="PickedCategory" unwindAction="categoryPickerDidPickCategory:" id="ul1-jV-Imz"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="23l-je-fp3" id="nUB-po-pQH"/>
+                            <outlet property="delegate" destination="23l-je-fp3" id="AXX-tc-K5k"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="SsK-cN-ayB"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JNq-6X-5un" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="pb5-I0-oQN" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1738" y="-300"/>
         </scene>
         <!--Second-->
         <scene sceneID="wg7-f3-ORb">
