--- a/MyLocations/Base.lproj/Main.storyboard
+++ b/MyLocations/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="49e-Tb-3d3">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -348,6 +348,51 @@
             </objects>
             <point key="canvasLocation" x="810" y="411"/>
         </scene>
+        <!--Map-->
+        <scene sceneID="ZoJ-fZ-IjF">
+            <objects>
+                <viewController id="Yx7-DE-Hhf" userLabel="Map" customClass="MapViewController" customModule="MyLocations" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="prI-vi-F0j">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="hybrid" showsUserLocation="YES" id="sXr-iw-DTN">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <connections>
+                                    <outlet property="delegate" destination="Yx7-DE-Hhf" id="Agd-Fa-bKh"/>
+                                </connections>
+                            </mapView>
+                            <navigationBar contentMode="scaleToFill" id="dZD-UK-aqR">
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Map" id="yHf-bz-ewF">
+                                        <barButtonItem key="leftBarButtonItem" title="Locations" id="EMh-e8-3Dy">
+                                            <connections>
+                                                <action selector="showLocations" destination="Yx7-DE-Hhf" id="dRO-Ad-Pc6"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" title="User" id="3Zz-Ni-EAN">
+                                            <connections>
+                                                <action selector="showUser" destination="Yx7-DE-Hhf" id="joY-Cm-NEH"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Map" id="4aa-X9-15S" userLabel="Map"/>
+                    <connections>
+                        <outlet property="mapView" destination="sXr-iw-DTN" id="QDl-b7-jib"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0An-Fe-jqG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="615" y="1198"/>
+        </scene>
         <!--Locations-->
         <scene sceneID="qLx-Rs-YsR">
             <objects>
@@ -375,7 +420,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="categoryCell" textLabel="rRW-An-E1k" style="IBUITableViewCellStyleDefault" id="eVY-bn-Tez">
-                                <rect key="frame" x="0.0" y="92" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eVY-bn-Tez" id="4ty-1b-gc7">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -420,6 +465,7 @@
                     <connections>
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                         <segue destination="ubE-qr-208" kind="relationship" relationship="viewControllers" id="Po3-z6-Y1F"/>
+                        <segue destination="Yx7-DE-Hhf" kind="relationship" relationship="viewControllers" id="dK4-bF-SZl"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
