--- a/MyLocations/Base.lproj/Main.storyboard
+++ b/MyLocations/Base.lproj/Main.storyboard
@@ -161,6 +161,10 @@
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="qK3-6M-jAn">
+                                                    <rect key="frame" x="129" y="11" width="131" height="24"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -286,10 +290,12 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="addPhotoLabel" destination="OeA-zR-Ibr" id="Kyk-jS-bq9"/>
                         <outlet property="addressLabel" destination="ec3-h0-Rgj" id="ndC-pV-Hab"/>
                         <outlet property="categoryLabel" destination="DJP-EH-PEv" id="p2w-ic-JVb"/>
                         <outlet property="dateLabel" destination="PmJ-98-MVJ" id="jPq-qs-tzp"/>
                         <outlet property="descriptionTextView" destination="QPe-C5-D5q" id="HBS-J6-goj"/>
+                        <outlet property="imageView" destination="qK3-6M-jAn" id="7aZ-pW-Z1T"/>
                         <outlet property="latitudeLabel" destination="EZ3-xc-ebE" id="NBb-QW-bOO"/>
                         <outlet property="longitudeLabel" destination="EWO-Po-CrQ" id="2Rx-Pe-7VX"/>
                     </connections>
